// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots tests should display correctly 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-owns="downshift-1-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <div>
      <button
        aria-controls="downshift-1-menu"
        aria-labelledby="downshift-1-label"
        class="component secondary m component secondary block withRightAddons component"
        id="downshift-0-input"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-0-input"
            id="downshift-1-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <div>
      <button
        aria-controls="downshift-3-menu"
        aria-labelledby="downshift-3-label"
        class="component secondary m component secondary block iconOnly component"
        id="downshift-2-input"
        tabindex="0"
        type="button"
      >
        <span
          class="addons"
        >
          <span
            class="iconContainer open"
          >
            <svg
              data-test-id="picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 2`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-3-label"
          class="optionsListContainer optionsList"
          id="downshift-3-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList m"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-0"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Neptunium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-1"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Plutonium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-2"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Americium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-3"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Curium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-4"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Berkelium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-5"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Californium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-6"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Einsteinium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-7"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Fermium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-8"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Mendelevium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-9"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Nobelium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-10"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Lawrencium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-11"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Rutherfordium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-12"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Dubnium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-13"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Seaborgium
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-3-item-14"
                role="option"
              >
                <div
                  class="content textContent"
                >
                  Bohrium
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
